@@ -145,6 +145,8 @@ module eos_type_module
     real(dp_t) :: dedA
     real(dp_t) :: dedZ
 
+    real(dp_t) :: conductivity
+
   end type eos_t
 
 contains
