@@ -9,16 +9,15 @@ contains
     implicit none
   end subroutine actual_conductivity_init
 
-  subroutine actual_conductivity(eos_state, conductivity)
+  subroutine actual_conductivity(eos_state)
 
     use eos_type_module
     use extern_probin_module, only: conductivity_constant
 
     type (eos_t)    , intent(inout) :: eos_state
-    real (kind=dp_t), intent(inout) :: conductivity
 
     ! fill the conductivity
-    conductivity = conductivity_constant
+    eos_state % conductivity = conductivity_constant
 
   end subroutine actual_conductivity
 
